# smpp-codec-ffi

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: release-ffi.yml
bindings/: README.md
bindings/bindings-kotlin/uniffi/smpp_codec_ffi/: smpp_codec_ffi.kt
bindings/bindings-python/: smpp_codec_ffi.py
bindings/bindings-swift/: smpp_codec_ffi.swift  smpp_codec_ffiFFI.h  smpp_codec_ffiFFI.modulemap
bindings/libsmpp_codec_ffi-macos/: libsmpp_codec_ffi.dylib
bindings/python-wheels/: smpp_codec_ffi-0.1.0-py3-none-manylinux_2_34_x86_64.whl
examples/java/: README.md  ToolClient.java  ToolServer.java
examples/kotlin/: README.md  TestUsage.kt  ToolClient.kt  ToolServer.kt
examples/python/: README.md  test_usage.py  tool_client.py  tool_server.py
examples/swift/: README.md  TestUsage.swift  ToolClient.swift  ToolServer.swift
src/: ancillary_pdu_ffi.rs  broadcast_pdu_ffi.rs  common.rs  delivery_pdu_ffi.rs  lib.rs  session_pdu_ffi.rs  splitter.rs  submission_pdu_ffi.rs  tlv.rs
tests/: ancillary_pdu.rs  broadcast_pdu.rs  common.rs  delivery.rs  session_pdu.rs  splitter.rs  submission.rs  tlv.rs
