[package]
name = "smpp-codec-ffi"
version = "0.1.0"
edition = "2021"
description = "An FFI binding for the smpp-codec crate"
repository = "https://github.com/J93d/smpp-codec-ffi"
readme = "README.md"
keywords = ["smpp", "sms", "codec", "protocol", "telecom"]
categories = ["encoding", "network-programming"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "smpp_codec_ffi"

[dependencies]
smpp-codec = "0.2.1"
uniffi = { version = "0.28", features = ["cli"] }
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
